--- a/spec/dummy/app/views/punto_pagos_rails/transactions/success.html.erb
+++ b/spec/dummy/app/views/punto_pagos_rails/transactions/success.html.erb
@@ -1,2 +1,6 @@
-<h3><%= t('punto_pagos_rails.success.title') %></h3>
-<p><%= t('punto_pagos_rails.success.detail', id: @resource.id, amount: @resource.amount, resource: @resource.class.name.downcase) %></p>
+<div class="puntopagos">
+  <div class="view success">
+    <h2><%= t('punto_pagos_rails.success.title') %></h2>
+    <p><%= t('punto_pagos_rails.success.detail', id: @resource.id, amount: @resource.amount, resource: @resource.class.name.downcase).html_safe %></p>
+  </div>
+</div>
