--- a/spec/dummy/app/views/home/index.html.erb
+++ b/spec/dummy/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
-<%= form_tag(punto_pagos_rails.transaction_create_path({resource_id: Ticket.create(amount: 200).id})) do %>
+<%= form_tag(transaction_create_path) do %>
   <%= submit_tag "Pagar!" %>
 <% end %>
