--- a/spec/dummy/app/views/home/index.html.erb
+++ b/spec/dummy/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
-<%= form_tag(transaction_create_path) do %>
-  <%= submit_tag "Pagar!" %>
+<%= form_for(:ticket, url: transaction_create_path) do |f| %>
+  Monto: <%= f.number_field(:amount) %><br /><br />
+  <%= f.submit "Pagar!" %>
 <% end %>
