tests(TransactionsController): specs for create action

--- a/spec/dummy/app/views/transactions/success.html.erb
+++ b/spec/dummy/app/views/transactions/success.html.erb
@@ -1,5 +1,6 @@
 <div class="puntopagos">
   <div class="view success">
     <h2><%= t("punto_pagos_rails.success.title") %></h2>
+    Success Ticket #<%= @ticket.id %>
   </div>
 </div>
