tests(TransactionsController): specs for notification action

--- a/lib/generators/punto_pagos_rails/payment_flow/templates/transactions_controller.rb.erb
+++ b/lib/generators/punto_pagos_rails/payment_flow/templates/transactions_controller.rb.erb
@@ -11,7 +11,7 @@ class <%= controller_class %> < ApplicationController
   end
 
   def notification
-    @<%= payable %> = PuntoPagosRails::TransactionService.notificate(params, request.headers)
+    response = PuntoPagosRails::TransactionService.notificate(params, request.headers)
     render(json: response)
   end
 
