refactor(): add methods to get payable entity by token in transactions service to simplify transactions controller logic

--- a/lib/generators/punto_pagos_rails/payment_flow/templates/error.html.erb
+++ b/lib/generators/punto_pagos_rails/payment_flow/templates/error.html.erb
@@ -1,5 +1,3 @@
-<div class="puntopagos">
-  <div class="view error">
-    <h2><%= error_message %></h2>
-  </div>
-</div>
+Error view
+
+<%%= @<%= payable %>.errors.messages %>
