--- a/lib/generators/punto_pagos_rails/payment_flow/templates/success.html.erb
+++ b/lib/generators/punto_pagos_rails/payment_flow/templates/success.html.erb
@@ -1,5 +1,3 @@
-<div class="puntopagos">
-  <div class="view success">
-    <h2><%= t("punto_pagos_rails.success.title") %></h2>
-  </div>
-</div>
+Success view
+
+<%%= @<%= payable %> %>
