--- a/spec/dummy/app/views/transactions/error.html.erb
+++ b/spec/dummy/app/views/transactions/error.html.erb
@@ -1,6 +1,3 @@
-<div class="puntopagos">
-  <div class="view error">
-    <h2><%= error_message %></h2>
-    Error Ticket #<%= @ticket.id %>
-  </div>
-</div>
+Error view
+
+<%= @ticket.errors.messages %>
