feat(generators.PaymentFlow): add --no-ssl option

--- a/lib/generators/punto_pagos_rails/payment_flow/templates/transactions_controller.rb.erb
+++ b/lib/generators/punto_pagos_rails/payment_flow/templates/transactions_controller.rb.erb
@@ -6,8 +6,13 @@ class <%= controller_class %> < ApplicationController
   end
 
   def notification
+<% if ssl? -%>
     response = PuntoPagosRails::TransactionService.notificate(params, request.headers)
     render json: response
+<% else -%>
+    PuntoPagosRails::TransactionService.complete_<%= payable %>_transaction(params)
+    head(200)
+<% end -%>
   end
 
   def success
